--- a/config.env
+++ b/config.env
@@ -1,4 +1,5 @@
 NODE_ENV=development
 PORT=3000
-USER_NAME=Gurcan
-PASSWORD=123456
+DATABASE=mongodb+srv://gurcan:<PASSWORD>@cluster0.zmufa.mongodb.net/natours?retryWrites=true&w=majority
+DATABASE_LOCAL = mongodb://localhost:27017/natours
+DATABASE_PASSWORD=cSDGKoP4bYnvzlKB
